# DiffEnergy

./: .gitignore  README.md  dist.py  dum.ipynb  get_interp_likelihoods.py  pyproject.toml  selected_dfmdock_trajectories.csv  test_groundtruth.py  test_grountruth.ipynb
configs/: dfmdock_diff_interpolated.yaml  dfmdock_diff_piecewise_ode.yaml  dfmdock_diff_piecewise_ode_2interp.yaml  dfmdock_diff_piecewise_ode_3interp.yaml  dfmdock_diff_trapezoid.yaml  dfmdock_ensembled.yaml  dfmdock_ensembled_ode.yaml  dfmdock_flow.yaml  dfmdock_flow_2interp.yaml  dfmdock_flow_40.yaml  dfmdock_gt_ensembled.yaml  dfmdock_gt_flow.yaml  dfmdock_traj_flow.yaml  dfmdock_traj_forces.yaml  gaussian_diff_trapezoid.yaml  gaussian_ensembled.yaml  gaussian_flow.yaml  gaussian_traj_forces.yaml  likelihood_1d.yaml  likelihood_dfmdock_tr.yaml  likelihood_gaussian_1d.yaml  likelihood_gaussian_1d_floweuler.yaml  likelihood_gaussian_1d_interp_diffspace.yaml  likelihood_gaussian_1d_interp_difftime.yaml  likelihood_gaussian_1d_interp_difftotal.yaml  likelihood_gaussian_1d_perturbation.yaml  likelihood_gaussian_1d_unmoving.yaml  likelihood_laplacian.yaml  sample_dfmdock.yaml  sample_dfmdock_nonoise.yaml  sample_gaussian_1d.yaml  sample_gaussian_1d_100.yaml  sample_gaussian_1d_5000.yaml  sample_gaussian_1d_original.yaml  sample_gaussian_1d_unnoised.yaml  sample_gaussian_2d.yaml  train_1d.yaml  train_gaussian_1d.yaml  train_gaussian_1d_copy.yaml  train_gaussian_1d_original.yaml  (+3 more)
db5_test/: index.csv
diffenergy/: gaussian_helper.py  groundtruth_score.py  helper.py  helper_gpu.py  inference.py  initchaining.py  likelihood.py  (+6 more)
(+401 files in other folders)
