[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "diffenergy"
version = "0.2.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "omegaconf",
    "hydra-core",
    "tqdm",
    "matplotlib",
    "numpy",
    "pandas",
    "torchdiffeq",
    "fair-esm",
    "biotite",
    "torch-geometric",
    "pytorch-lightning",
    "einops",
    "biopython",
    "dm-tree",
]

[tool.setuptools.packages]
find = {}
